# exceptlib

./: .readthedocs.yaml  LICENSE.md  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/: README.md  requirements.txt
docs/source/: api.rst  conf.py  index.rst  sequence_diagrams.rst
src/: exceptlib.py
tests/unit/: test_ExceptionFrom.py  test_exc_from_mod.py  test_internals.py
