[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
authors  = [
    {name = "Will Fatherley", email = "wfatherley@proton.me"}
]
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Quality Assurance",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3"
]
description = "Additional exception handling mechanisms"
version = "2024.1"
license = {file = "LICENSE.md"}
maintainers = [
    {name = "Will Fatherley", email = "wfatherley@proton.me"}
]
name = "exceptlib"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.9"


[project.urls]
repository = "https://github.com/wfatherley/exceptlib.git"